refactor: auto-service